# radar-dsp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md
include/radar/: cfar_detector.hpp  radar_pipeline.hpp  range_doppler.hpp  rt_thread.hpp  terminal_dashboard.hpp  track_manager.hpp  waveform_generator.hpp
output/: perf_20260423_101057.csv  perf_20260423_101132.csv
scripts/: benchmark.sh  build.sh  run.sh
src/: adc_simulator.cpp  cfar_detector.cpp  main.cpp  perf_counter.cpp  pulse_compressor.cpp  radar_pipeline.cpp  range_doppler.cpp  rt_thread.cpp  terminal_dashboard.cpp  track_manager.cpp  waveform_generator.cpp
src/adc/: adc_simulator.cpp  adc_simulator.hpp
src/dashboard/: terminal_dashboard.cpp  terminal_dashboard.hpp
src/dsp/: cfar_detector.cpp  pulse_compressor.cpp  pulse_compressor.hpp  range_doppler.cpp
src/metrics/: perf_counter.cpp  perf_counter.hpp
src/pipeline/: lock_free_queue.hpp  radar_pipeline.cpp  radar_pipeline.hpp
src/scheduler/: rt_thread.cpp
src/tracker/: target.hpp  track_manager.cpp  track_manager.hpp
src/waveform/: waveform_generator.cpp
tests/: test_cfar.cpp  test_pulse_compression.cpp  test_range_doppler.cpp  test_tracker.cpp
tools/: benchmark_report.py  visualize.py
